--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Clifford Mukosh, a Full-Stack Developer specializing in Django, React, and real-time web applications.">
-    <meta name="keywords" content="Django, React, Redux, Celery, WebSocket, OAuth, Full Stack Developer, Clifford Mukosh">
+    <meta name="description" content="Portfolio of Clifford Mukosh, a Python Backend Developer specializing in FastAPI, Django, RESTful APIs, and scalable systems.">
+    <meta name="keywords" content="Python, FastAPI, Django, RESTful APIs, PostgreSQL, MongoDB, Docker, Celery, Pytest, Full Stack Developer, Clifford Mukosh">
     <meta name="author" content="Clifford Mukosh">
     <title>Clifford Mukosh - Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -41,9 +41,9 @@
 <section id="hero" class="text-white text-center py-5 bg-blueviolet">
     <div class="container">
       <h1 class="display-3 mb-4 animated-text">Welcome to Clifford Mukosh's Portfolio</h1>
-      <p class="lead animated-text">Explore my Django and React projects!</p>
+      <p class="lead animated-text">Explore my Python backend and full-stack projects!</p>
       <div class="scrolling-text">
-        <p>Experienced in Django, Django REST Framework, Celery, WebSocket, OAuth, React, Redux, Vite, and payment gateways.</p>
+        <p>Experienced in Python, FastAPI, Django, RESTful APIs, PostgreSQL, MongoDB, Docker, Celery, Pytest, and CI/CD pipelines.</p>
       </div>
     </div>
 </section>
@@ -52,14 +52,17 @@
 <section id="about" class="py-5 text-center text-white position-relative">
   <div class="container">
     <h2 class="mb-4" id="typing-heading">About Clifford</h2>
-    <p class="lead" id="typing-text">Full-Stack Developer specializing in scalable backend solutions and real-time web applications.</p>
+    <p class="lead" id="typing-text">Python Backend Developer specializing in scalable APIs and microservices.</p>
     <p style="text-align: justify; font-size: 17px; font-weight: bold;">
-      I am a passionate Full-Stack Developer with expertise in building robust web applications using <b>Django</b> and <b>Django REST Framework</b>.
-      I excel in implementing asynchronous task processing with <b>Celery</b>, real-time communication with <b>Django Channels</b> and <b>WebSocket Consumers</b>,
-      and secure authentication via <b>Google OAuth</b>. My experience includes integrating payment gateways like <b>M-Pesa</b> and <b>Stripe</b> for seamless transactions.
-      On the frontend, I leverage <b>React</b> with <b>Redux</b> and <b>Vite</b> to create responsive, user-centric interfaces.
-      I have delivered <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">3</b> client projects and built
-      <b id="personalProjects" style="color:rgb(216, 230, 23); font-size: 20px;">5</b> personal projects, showcasing my ability to craft innovative solutions.
+      I am a dedicated Python Backend Developer with over 4 years of experience building high-performance, scalable backend systems using <b>Python</b>, <b>FastAPI</b>, and <b>Django</b>. 
+      I specialize in designing <b>RESTful APIs</b>, optimizing <b>PostgreSQL</b> and <b>MongoDB</b> databases, and implementing asynchronous task processing with <b>Celery</b>. 
+      My expertise includes containerization with <b>Docker</b>, CI/CD pipelines on <b>AWS</b>, and writing robust tests with <b>Pytest</b>. 
+      I have integrated third-party APIs like <b>M-Pesa</b> and <b>Stripe</b>, and worked with real-time systems using <b>Django Channels</b> and <b>WebSocket</b>. 
+      I’ve mentored junior developers and contributed to architectural decisions in <b id="clientProjects" style="color:rgb(216, 230, 23); font-size: 20px;">3</b> client projects and built 
+      <b id="personalProjects" style="color:rgb(216, 230, 23); font-size: 20px;">5</b> personal projects, including microservices and GraphQL-based solutions.
+    </p>
+    <p style="text-align: justify; font-size: 16px;">
+      <b>Skills</b>: Python, FastAPI, Django, Flask, RESTful APIs, PostgreSQL, MongoDB, Redis, Docker, Celery, Pytest, Git, AWS, CI/CD, GraphQL, Microservices, Prometheus
     </p>
   </div>
 </section>
@@ -73,10 +76,11 @@
         <div class="card bg-dark text-white">
           <div class="card-body">
             <h5 class="card-title">Backend Developer (Contract) – CPIMS</h5>
-            <p class="card-text"><b>September 2024</b></p>
+            <p class="card-text"><b>September 2024 – Present</b></p>
             <p>
-              Integrated the Integrated Population System into the Child Protection Management Information System using <b>Django</b> and <b>Django REST Framework</b>.
-              Implemented <b>Google OAuth</b> for secure authentication and optimized API performance, reducing response time by 20%.
+              Developed RESTful APIs using <b>FastAPI</b> and <b>Django REST Framework</b> to integrate the Integrated Population System into the Child Protection Management Information System. 
+              Optimized <b>PostgreSQL</b> queries, reducing API response time by 20%. Implemented <b>Google OAuth</b> for secure authentication and used <b>Pytest</b> for comprehensive unit testing. 
+              Contributed to CI/CD pipeline setup on <b>AWS</b>.
             </p>
           </div>
         </div>
@@ -87,8 +91,9 @@
             <h5 class="card-title">Full Stack Developer – Learnsoft Beliotech Solutions</h5>
             <p class="card-text"><b>May 2023 – August 2023</b></p>
             <p>
-              Developed web applications using <b>Django</b>, <b>React</b> with <b>Redux</b>, and <b>Laravel</b>, integrating <b>M-Pesa</b> and <b>PayPal</b> for secure payments.
-              Utilized <b>Celery</b> for asynchronous task processing, enhancing application scalability for high-volume transactions.
+              Built scalable web applications using <b>Django</b>, <b>FastAPI</b>, and <b>React</b> with <b>Redux</b>, integrating <b>M-Pesa</b> and <b>PayPal</b> for secure payments. 
+              Utilized <b>Celery</b> with <b>Redis</b> for asynchronous task processing, improving transaction throughput by 15%. 
+              Deployed services using <b>Docker</b> and configured CI/CD pipelines on <b>AWS</b>. Mentored junior developers on API design and testing best practices.
             </p>
           </div>
         </div>
@@ -99,8 +104,9 @@
             <h5 class="card-title">Backend Development Intern – WHTA Network</h5>
             <p class="card-text"><b>January 2023 – May 2023</b></p>
             <p>
-              Built microservices and APIs using <b>Django REST Framework</b> and implemented real-time chat with <b>Django Channels</b> and <b>WebSocket Consumers</b>.
-              Configured <b>MySQL</b> databases and integrated <b>Google OAuth</b>, completing two full-cycle projects.
+              Designed and implemented microservices and RESTful APIs using <b>Django REST Framework</b> and <b>Flask</b>, integrated with <b>MySQL</b> and <b>MongoDB</b>. 
+              Built a real-time chat system with <b>Django Channels</b> and <b>WebSocket Consumers</b>. 
+              Wrote unit tests with <b>Pytest</b> and deployed services using <b>Docker</b>. Contributed to architectural discussions for two full-cycle projects.
             </p>
           </div>
         </div>
@@ -120,23 +126,27 @@
           <div class="card-body">
             <h5 class="card-title">E-Commerce Platform</h5>
             <p class="card-text">
-              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>Django, Django REST Framework, Celery, MySQL, React, Redux, M-Pesa, Stripe</b></p>
-              Developed a scalable e-commerce platform with secure payment processing using M-Pesa and Stripe, handling transactions.
-              Used Django and Celery for asynchronous order processing, reducing checkout time. Built a responsive frontend with React and Redux for seamless user experience.
-              
+              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>FastAPI, Django, PostgreSQL, Celery, Redis, React, Redux, M-Pesa, Stripe, Pytest, Docker</b></p>
+              Built a scalable e-commerce platform with RESTful APIs using <b>FastAPI</b> and <b>Django</b>, integrated with <b>PostgreSQL</b> and <b>Redis</b>. 
+              Implemented asynchronous order processing with <b>Celery</b>, reducing checkout time by 25%. 
+              Secured payments with <b>M-Pesa</b> and <b>Stripe</b>. Wrote unit tests with <b>Pytest</b> and deployed using <b>Docker</b>. 
+              Developed a responsive frontend with <b>React</b> and <b>Redux</b>. 
+              <a href="https://github.com/Clifford537/Ecommerce-Platform" target="_blank">View on GitHub</a>
             </p>
           </div>
         </div>
       </div>
       <div class="col-lg-4 mb-4">
         <div class="card">
-          <img src="./static/medicalrecords.png" class="card-img-top" alt="Medical Records Management System screenshot">
+          <img src="./static/taskapi.png" class="card-img-top" alt="Task Management API screenshot">
           <div class="card-body">
-            <h5 class="card-title">Medical Records Management System</h5>
+            <h5 class="card-title">Task Management API</h5>
             <p class="card-text">
-              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>PHP, MySQL, JavaScript, jQuery, Tailwind CSS</b></p>
-              Developed a web-based system to manage patient records and medicine inventory for medical facilities. Implemented features for creating, updating, and searching patient records with unique identifiers, and tracking inventory. Used PHP and MySQL for robust backend data management and Tailwind CSS for a responsive, user-friendly interface.
-              <a href="https://github.com/Clifford537/Pharmacy-Inventory-System" target="_blank">View on GitHub</a>
+              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>FastAPI, PostgreSQL, Docker, Pytest, Celery, Prometheus</b></p>
+              Developed a RESTful API for task management using <b>FastAPI</b>, integrated with <b>PostgreSQL</b> for efficient data storage. 
+              Used <b>Celery</b> for asynchronous task scheduling and <b>Prometheus</b> for monitoring API performance. 
+              Containerized the application with <b>Docker</b> and wrote comprehensive tests with <b>Pytest</b>, achieving 90% code coverage. 
+              <a href="https://github.com/Clifford537/Task-Management-API" target="_blank">View on GitHub</a>
             </p>
           </div>
         </div>
@@ -147,9 +157,10 @@
           <div class="card-body">
             <h5 class="card-title">School Communication System</h5>
             <p class="card-text">
-              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>Flask, Celery, MySQL, React, Vite, Telegram API</b></p>
-              Developed a real-time messaging system for lecturers and students using Flask and Telegram API integration.
-              Utilized Celery for asynchronous message processing, supporting 1,000+ users, and built a responsive React frontend with Vite.
+              <p style="color: rgb(23, 119, 230); font-size: 18px;">Technologies: <b>Flask, Celery, MySQL, React, Vite, Telegram API, Pytest</b></p>
+              Built a real-time messaging system for lecturers and students using <b>Flask</b> and <b>Telegram API</b>. 
+              Implemented asynchronous message processing with <b>Celery</b> and <b>MySQL</b>, supporting 1,000+ users. 
+              Wrote integration tests with <b>Pytest</b> and created a responsive <b>React</b> frontend with <b>Vite</b>. 
               <a href="https://github.com/Clifford537/Course_update_bot.git" target="_blank">View on GitHub</a>
             </p>
           </div>
@@ -198,7 +209,7 @@
 
   function incrementCounters() {
     const targetClientProjects = 3; // WHTA, Learnsoft, CPIMS
-    const targetPersonalProjects = 5; // E-Commerce, Job Connection, School Comm, Medical, Library
+    const targetPersonalProjects = 5; // E-Commerce, Task API, School Comm, Medical, Library
 
     if (clientProjectsCount < targetClientProjects) {
       clientProjectsCount++;
