--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h1 class="display-3 mb-4 animated-text">Welcome to Clifford Mukosh's Portfolio</h1>
       <p class="lead animated-text">Explore my Django and React projects!</p>
       <div class="scrolling-text">
-        <p>Experienced in Django, Django REST Framework, Celery, WebSocket, OAuth, React, Redux, Vite, and payment gateways.</p>
+        <p>Experienced in Django, Django REST Framework, Celery, WebSocket, OAuth, React, Redux, Vite, FastAPI and payment gateways.</p>
       </div>
     </div>
 </section>
